--- a/frontend/index.css
+++ b/frontend/index.css
@@ -77,10 +77,10 @@ code {
   width: 24px;
   height: 24px;
   margin: 4px;
-  border: 4px solid #fff;
+  border: 4px solid rgb(102, 102, 102);
   border-radius: 50%;
   animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  border-color: #fff transparent transparent transparent;
+  border-color: rgb(102, 102, 102) transparent transparent transparent;
 }
 
 .lds-ring div:nth-child(1) {
